Removed button from overall card, button now contains the image section. Still need to fix the modal not showing for Pokemon not on the same page.

--- a/src/App.scss
+++ b/src/App.scss
@@ -154,9 +154,9 @@ i {
     width: 90%;
     opacity: 1;
 
-    &:hover {
-        box-shadow: 2px 5px white;
-    }
+    // &:hover {
+    //     box-shadow: 2px 5px white;
+    // }
 }
 
 .textureBg {
@@ -226,4 +226,10 @@ i {
 .modal-content {
     border: none;
 }
-
+.modalTrig {
+    border: none;
+    background-color: transparent;
+    figure img {
+        width: 200px;
+    }
+}
